// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`block-comment.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/* @flow */

foo = {"1":bar} // "1" should quoted

=====================================output=====================================
/* @flow */

foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`block-comment-2.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/*                     @noflow */

foo = {"1":bar} // "1" should quoted

=====================================output=====================================
/*                     @noflow */

foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`filename.js.flow format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
foo = {"1":bar} // "1" should quoted

=====================================output=====================================
foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`inline-comment.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// @flow

foo = {"1":bar} // "1" should quoted

=====================================output=====================================
// @flow

foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`inline-comment-2.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
//                     @noflow

foo = {"1":bar} // "1" should quoted

=====================================output=====================================
//                     @noflow

foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`inline-comment-3.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
//  another comment
//                     @flow

foo = {"1":bar} // "1" should quoted

=====================================output=====================================
//  another comment
//                     @flow

foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`like-a-pragma.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// by fisker@flow.prettier.com :)

foo = {"1":bar} // "1" should quoted

=====================================output=====================================
// by fisker@flow.prettier.com :)

foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`not-flow.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
foo = {"1":bar} // "1" should unquoted

=====================================output=====================================
foo = { 1: bar }; // "1" should unquoted

================================================================================
`;

exports[`not-flow-2.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// @flowflow

foo = {"1":bar} // "1" should unquoted

=====================================output=====================================
// @flowflow

foo = { 1: bar }; // "1" should unquoted

================================================================================
`;

exports[`not-flow-3.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
a = "  @flow "
foo = {"1":bar} // "1" should unquoted

=====================================output=====================================
a = "  @flow ";
foo = { 1: bar }; // "1" should unquoted

================================================================================
`;

exports[`not-flow-4.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
a = "  // @flow "
foo = {"1":bar} // "1" should unquoted

=====================================output=====================================
a = "  // @flow ";
foo = { 1: bar }; // "1" should unquoted

================================================================================
`;

exports[`not-flow-5.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
#!/usr/bin/env @flow
foo = {"1":bar} // "1" should unquoted

=====================================output=====================================
#!/usr/bin/env @flow
foo = { 1: bar }; // "1" should unquoted

================================================================================
`;

exports[`pragma.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/**
 * @flow
 */

foo = {"1":bar} // "1" should quoted

=====================================output=====================================
/**
 * @flow
 */

foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`pragma-2.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/**
 *                      @noflow
 */

foo = {"1":bar} // "1" should quoted

=====================================output=====================================
/**
 *                      @noflow
 */

foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`pragma-react.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 */

// DocBlock above is copied from https://github.com/facebook/react/blob/8da0da0937af154b775b243c9d28b6aa50db696b/packages/react-dom/index.js#L1-L8

foo = {"1":bar} // "1" should quoted

=====================================output=====================================
/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 *
 * @flow
 */

// DocBlock above is copied from https://github.com/facebook/react/blob/8da0da0937af154b775b243c9d28b6aa50db696b/packages/react-dom/index.js#L1-L8

foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`shebang-inline-comment.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
#!/usr/bin/env node
//  another comment
//                     @flow

foo = {"1":bar} // "1" should quoted

=====================================output=====================================
#!/usr/bin/env node
//  another comment
//                     @flow

foo = { "1": bar }; // "1" should quoted

================================================================================
`;

exports[`shebang-pragma.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
#!/usr/bin/env node
/**
 * @format
 *                      @noflow
 */

foo = {"1":bar} // "1" should quoted

=====================================output=====================================
#!/usr/bin/env node
/**
 * @format
 *                      @noflow
 */

foo = { "1": bar }; // "1" should quoted

================================================================================
`;
